# aerosim

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  aerosim.code-workspace  build.py  build_aerosim.bat  build_aerosim.sh  build_wheels.bat  build_wheels.sh  install_aerosim.bat  install_aerosim.sh  launch_aerosim.bat  launch_aerosim.sh  log4rs.yaml  mkdocs.yml  pre_install.bat  pre_install.sh  pyproject.toml  reset_repositories.bat  reset_repositories.sh  update_repositories.bat  update_repositories.sh
aerosim/: README.md  pyproject.toml
aerosim-controllers/: Cargo.toml  README.md  build_jsbsim_autopilot_controller_fmu.bat  build_jsbsim_autopilot_controller_fmu.sh  build_jsbsim_flight_controller_fmu.bat  build_jsbsim_flight_controller_fmu.sh  build_primary_flight_display_controller_fmu.bat  build_primary_flight_display_controller_fmu.sh  pyproject.toml
aerosim-controllers/python/aerosim_controllers/: __init__.py  jsbsim_autopilot_controller_fmu_model.py  jsbsim_flight_controller_fmu_model.py  primary_flight_display_controller_fmu_model.py  requirements_jsbsim.txt
aerosim-controllers/src/: lib.rs
aerosim-core/: Cargo.toml  README.md  pyproject.toml
aerosim-core/config/: topics_needed.json
aerosim-core/python/aerosim_core/: __init__.py  fmu_utils.py  utils.py
aerosim-core/src/: actor.rs  lib.rs  path.rs  trajectory.rs
aerosim-core/src/coordinate_system/: conversion_utils.rs  geo.rs  mod.rs  world_coordinate.rs
aerosim-core/src/math/: mod.rs  quaternion.rs  rotator.rs  vector.rs
aerosim-core/tests/: offset_map.json  test_core.py  test_path.py  test_quaternion.py
aerosim-data/: CMakeLists.txt  Cargo.toml  Makefile  README.md  pyproject.toml
aerosim-data/examples/: add_fmu.rs  dds_publisher.rs  dds_pypublisher.py  dds_pysubscriber.py  dds_subscriber.rs  example_publisher.rs  example_ros2_subscriber.py  kafka_publisher.rs  kafka_pypublisher.py  kafka_pysubscriber.py  kafka_subscriber.rs
aerosim-data/idl/: Actor.idl  CameraInfo.msg  CompressedImage.idl  Header.idl  Image.idl  Pose.idl  Quaternion.idl  TimeStamp.idl  Vector3.idl
aerosim-data/python/aerosim_data/: __init__.py  middleware.py  utils.py
aerosim-data/src/: build.rs  lib.rs
aerosim-data/src/interfaces/: actor.rs  fmi.rs  mod.rs  sensor.rs  vehicle.rs
aerosim-data/src/middleware/: dds.rs  kafka.rs  mod.rs  ros2.rs
aerosim-data/src/middleware/common/: message.rs  metadata.rs  mod.rs
aerosim-data/src/types/: actor.rs  controller.rs  effector.rs  flight_deck.rs  geometry.rs  header.rs  json.rs  mod.rs  registry.rs  sensor.rs  timestamp.rs  trajectory.rs  vehicle.rs
aerosim-data/src/types/adsb/: airborne_position.rs  airborne_velocity.rs  aircraft_identification.rs  aircraft_operation_status.rs  aircraft_status.rs  gnss_position_data.rs  mod.rs  surface_position.rs  target_state_and_status_information.rs  types.rs
aerosim-data/src/types/downlink_format/: all_call.rs  bds.rs  comm.rs  long_air_air.rs  mod.rs  surveillance.rs  tisb.rs
aerosim-data/src/types/typesupport/: mod.rs  python_support.rs  rust_support.rs
aerosim-data/tests/: test_lib.py
aerosim-dynamics-models/: Cargo.toml  README.md  build_evtol_effectors_fmu.bat  build_evtol_effectors_fmu.sh  build_jsbsim_dynamics_fmu.bat  build_jsbsim_dynamics_fmu.sh  build_jsbsim_standalone_fmu.bat  build_jsbsim_standalone_fmu.sh  build_rotor_effector_fmu.bat  build_rotor_effector_fmu.sh  build_trajectory_follower_fmu_model.bat  build_trajectory_follower_fmu_model.sh  pyproject.toml
aerosim-dynamics-models/python/aerosim_dynamics_models/: __init__.py  evtol_effectors_fmu_model.py  jsbsim_dynamics_fmu_model.py  jsbsim_standalone_fmu_model.py  requirements_jsbsim_dynamics.txt  rotor_effector_fmu_model.py  trajectory_follower_fmu_model.py
aerosim-dynamics-models/src/: lib.rs
aerosim-scenarios/: Cargo.toml  README.md  pyproject.toml
aerosim-scenarios/python/aerosim_scenarios/: __init__.py
aerosim-scenarios/python/tests/: test_scenario.json  test_scenarios.py  test_updated_scenario.json
aerosim-scenarios/python/tests/configs/: general_settings.json
aerosim-scenarios/python/tests/trajectories/: drone_001_path.json
aerosim-scenarios/scenarios/: IntrudersInLACatalina.json
aerosim-scenarios/scenarios/actors/sensors/: fullhdcamera.json
aerosim-scenarios/scenarios/actors/vehicles/: generic_aircraft.json  generic_helicopter.json  generic_vtol.json
aerosim-scenarios/scenarios/actors/vertipads/: generic_vertipad.json
aerosim-scenarios/scenarios/trajectories/IntrudersInLACatalina/: Intruder1.json  Intruder2.json  ego_trajectory.json
aerosim-scenarios/schemas/: actor_schema.json  adsb.json  lidar.json  rgb_camera.json  scenario_scheama.json  sensor_schema.json  trajectories_schema.json  vertiports_schema.json
aerosim-scenarios/src/: lib.rs  scenario.rs  scenario_translator.rs
aerosim-sensors/: Cargo.toml  README.md  build_adsb_sensor_fmu_model.bat  build_adsb_sensor_fmu_model.sh  build_gnss_sensor_fmu_model.bat  build_gnss_sensor_fmu_model.sh  build_imu_sensor_fmu_model.bat  build_imu_sensor_fmu_model.sh  pyproject.toml
aerosim-sensors/python/aerosim_sensors/: __init__.py  adsb_sensor_fmu_model.py  gnss_sensor_fmu_model.py  imu_sensor_fmu_model.py
aerosim-sensors/python/tests/: test_sensors.py
aerosim-sensors/src/: adsb.rs  gnss.rs  imu.rs  lib.rs
aerosim-sensors/src/adsb/: decode.rs
aerosim-sensors/tests/: test_lib.py
aerosim-world/: Cargo.toml  README.md  pyproject.toml
aerosim-world-link/: Cargo.toml  build.bat  build.rs  build.sh
aerosim-world-link/.cargo/: config.toml
aerosim-world-link/src/: lib.rs  logger.rs  message_handler.rs
aerosim-world/python/aerosim_world/: __init__.py  fmu_driver.py
aerosim-world/src/: data_manager.rs  lib.rs  logging.rs  orchestrator.rs  scene_graph.rs  sim_clock.rs
aerosim-world/src/components/: actor.rs  mod.rs  sensor.rs  trajectory.rs  world.rs
aerosim/src/aerosim/: __init__.py  aerosim.py  install.py
aerosim/src/aerosim/core/: __init__.py  config.py  simulation.py
aerosim/src/aerosim/io/: __init__.py
docker/: .env  Dockerfile  (+2 more)
(+134 files in other folders)
