[package]
name = "aerosim-core"
version.workspace = true
edition.workspace = true
description.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aerosim_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3.workspace = true
aerosim-data = { path = "../aerosim-data" }
quaternion-core = "0.5.3"
serde.workspace = true
serde_json.workspace = true
egm2008 = "0.1.0"
csv = "1.3.1"
chrono.workspace = true
log.workspace = true

[package.metadata.maturin]
name = "aerosim.core"
