[package]
name = "aerosim-scenearios"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aerosim_scenarios"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3 = { version="0.23.3" }
strum = { version = "0.26.3", features = ["derive"] }
strum_macros = "0.26.4"
lazy_static = "1.5.0"
aerosim-data = { path = "../aerosim-data" }
