[package]
name = "aerosim-sensors"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aerosim_sensors"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.23.3"
lazy_static = "1.5.0"
aerosim-data = { path = "../aerosim-data" }
adsb_deku = "0.7.1"
hex = "0.4.3"
