[project]
name = "aerosim-sensors"
version = "0.1.0"
description = "AeroSim Sensors"
authors = [
    { name = "Praveen Palanisamy", email = "4770482+praveen-palanisamy@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["maturin>=1.2,<2.0"]
build-backend = "maturin"

[tool.rye]
managed = true
dev-dependencies = []

[tool.maturin]
python-source = "python"
module-name = "aerosim_sensors._sensors"
features = ["pyo3/extension-module"]
