[package]
name = "aerosim-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aerosim_world"
crate-type = ["cdylib", "rlib"]

[dependencies]
aerosim-core = { path = "../aerosim-core" }
aerosim-data = { path = "../aerosim-data" }
chrono = "0.4.38"
log = "0.4.21"
log4rs = "1.3.0"
lazy_static = "1.4.0"
ros2-client = "0.7.2"
pyo3 = "0.23.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
bevy_app = "0.15.0"
bevy_ecs = "0.15.0"
bevy_hierarchy = "0.15.0"
bevy_math = "0.15.0"
bevy_transform = "0.15.0"
mcap="0.15.0"
