[project]
name = "aerosim"
version = "0.1.0"
description = "Main python package for AeroSim"
authors = [
    { name = "Praveen Palanisamy", email = "4770482+praveen-palanisamy@users.noreply.github.com" },
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aerosim"]

[tool.hatch.build.targets.wheel.force-include]
"../examples" = "aerosim/examples"
